--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
 
   <div id="react-app"></div>
-  <script src="/js/app.js"></script>    
+  <script src="/js/app.js"></script>
   </body>
 </html>
